nextest-runner/src/record/snapshots/nextest_runner__record__display__tests__large_sizes.snap
---
source: nextest-runner/src/record/display.rs
expression: "DisplayRunList::new(&snapshot, None, &Styles::default(), &theme_characters,\n&Redactor::noop()).to_string()"
snapshot_kind: text
---
2 recorded runs:

  550e8400  2024-06-15 10:00:00      1.000s    976.6 MB  100 passed
  550e8400  2024-06-16 11:00:00      1.000s   9765.6 MB  200 passed  *latest
                                             ----------
                                             10742.2 MB
