nextest-runner/src/record/snapshots/nextest_runner__record__display__tests__normal_sizes.snap
---
source: nextest-runner/src/record/display.rs
expression: "DisplayRunList::new(&snapshot, None, &Styles::default(), &theme_characters,\n&Redactor::noop()).to_string()"
snapshot_kind: text
---
3 recorded runs:

  550e8400  2024-06-15 10:00:00      1.000s      50 KB  10 passed
  550e8400  2024-06-16 11:00:00      1.000s      75 KB  18 passed / 2 failed
  550e8400  2024-06-17 12:00:00      1.000s     100 KB  30 passed  *latest
                                             ---------
                                                225 KB
