nextest-runner/src/record/snapshots/nextest_runner__record__display__tests__replayability_format_too_new.snap
---
source: nextest-runner/src/record/display.rs
expression: "run.display_detailed(&index, &format_too_new, now, &Styles::default(),\n&theme_characters, &redactor).to_string()"
---
Run 550e8400-e29b-41d4-a716-446655440000

  nextest version:  0.9.100
  status:           completed (exit code 0)
  started at:       2024-06-15 10:30:00 +00:00 (10d ago)
  last written at:  2024-06-15 10:30:00 +00:00 (10d ago)
  duration:         1.000s
  replayable:       no: store format version incompatible: recording has major version 5, but this nextest only supports version 1 (upgrade nextest to replay this recording)

  tests:
    passed:         100

  sizes:            compressed  uncompressed  entries
    log                    0 B           0 B        0
    store               100 KB        300 KB        0
                    ----------  ------------  -------
    total               100 KB        300 KB        0
